# scopedb-sdk

./: .dockerignore  .editorconfig  .env.example  .gitignore  Justfile  Makefile  README.md  licenserc.toml  scopeql.dockerfile
.github/: semantic.yml
.github/actions/docker-push-by-digest/: action.yml
.github/actions/docker-release/: action.yml
.github/actions/docker-sanity-check/: action.yml
.github/workflows/: ci-go.yml  ci-java.yml  ci-rust.yml  ci.yml  release-scopeql.yml
dev/: config.toml  docker-compose.yml  download-hawkeye.sh
dev/docs/: Go.md  RELEASE.md
docs/: rust-http-api.md
go/: .gitignore  .golangci.toml  CHANGELOG.md  CONTRIBUTING.md  Justfile  Makefile  README.md  RELEASE.md  api_ingest.go  api_statement.go  arrow.go  arrow_chunk.go  cable.go  client.go  client_test.go  common_test.go  config.go  connection.go  doc.go  errors.go  go.mod  go.sum  ingest_test.go  result.go  statement.go  stress_test.go  table.go
go/__snapshots__/: ingest_test.snap
go/examples/: playground.go
go/examples/ingest/: ingest.go
go/examples/query/: query.go
go/examples/query_async/: query_async.go
go/integration_tests/: arrow_format_test.go  cable_test.go  ingest_test.go  main_test.go  stress_test.go  table_test.go  varant_test.go  variant_batch_cable_test.go
go/integration_tests/__snapshots__/: cable_test.snap  ingest_test.snap
go/integration_tests/internal/: testkit.go
go/itcases/: cable_test.go  error_test.go  main_test.go  table_test.go
go/itcases/__snapshots__/: cable_test.snap  error_test.snap  table_test.snap
go/tests/: common_test.go  query_test.go  utility.go
java/: .gitignore  README.md  pom.xml
java/scopedb-client/: pom.xml
java/scopedb-client/src/main/java/io/scopedb/sdk/client/: ScopeDBClient.java  ScopeDBClientNG.java  ScopeDBConfig.java
java/scopedb-client/src/main/java/io/scopedb/sdk/client/arrow/: ArrowBatchConvertor.java
java/scopedb-client/src/main/java/io/scopedb/sdk/client/exception/: ScopeDBException.java
java/scopedb-client/src/main/java/io/scopedb/sdk/client/helper/: EnumConverterFactory.java  FutureUtils.java  Futures.java  package-info.java
java/scopedb-client/src/main/java/io/scopedb/sdk/client/request/: FetchStatementParams.java  IngestData.java  IngestRequest.java  IngestResponse.java  ResultFormat.java  ResultSet.java  ResultSetField.java  ResultSetMetadata.java  StatementCancelResponse.java  StatementProgress.java  StatementRequest.java  StatementResponse.java  StatementStatus.java
java/scopedb-client/src/test/java/io/scopedb/sdk/client/: PrettyPrint.java  ScopeDBClientTest.java
node/: DELIVERY.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
node/examples/: batch.ts  statement.ts  table.ts
node/src/: client.ts  errors.ts  index.ts  ingest-stream.ts  protocol.ts  result.ts  statement.ts  table.ts
node/tests/: client.test.ts  helpers.ts  ingest-stream.test.ts  result.test.ts  statement.test.ts  table.test.ts
python/: .gitignore  README.md  it_tests.py  pyproject.toml
python/src/scopedb/: __init__.py  cable.py  client.py  errors.py  models.py  result.py  statement.py
rust/: API_SPEC.md  Cargo.toml  Justfile  README.md  rust-toolchain.toml  rustfmt.toml
rust/examples/: batch.rs  statement.rs  table.rs
rust/examples/common/: mod.rs
rust/scopedb-client/: Cargo.toml
rust/scopedb-client/src/: client.rs  lib.rs  protocol.rs  result.rs  statement.rs
rust/scopeql/: Cargo.toml
rust/scopeql/src/: client.rs  command.rs  error.rs  main.rs
rust/scopeql/src/repl/: command.rs  entrypoint.rs  highlight.rs  mod.rs  prompt.rs  tokenizer.rs  validate.rs
rust/src/: api.rs  batch.rs  client.rs  codec.rs  config.rs  error.rs  ingest_stream.rs  lib.rs  protocol.rs  result.rs  statement.rs  table.rs
scopeql/: CHANGELOG.md  Cargo.toml  Justfile  README.md  RELEASE.md  build.rs  rust-toolchain.toml
scopeql/scripts/: check-version-tag-match.sh
scopeql/src/: client.rs  command.rs  config.rs  error.rs  execute.rs  global.rs  load.rs  main.rs  pretty.rs  tokenizer.rs  version.rs
scopeql/src/repl/: command.rs  entrypoint.rs  highlight.rs  mod.rs  validate.rs
