# Copyright 2024 ScopeDB, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "scopedb-client"
version = "0.2.0"

categories = ["database"]
description = "A Rust client for ScopeDB"
keywords = ["scopedb"]

edition = "2024"
homepage = "https://www.scopedb.io"
license = "Apache-2.0"
rust-version = "1.85.0"
repository = "https://github.com/scopedb/scopedb-sdk"

[dependencies]
anyhow = { version = "1.0.99" }
fastrace = { version = "0.7" }
fastrace-reqwest = { version = "0.2" }
hex = { version = "0.4" }
jiff = { version = "0.2", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "charset",
  "http2",
  "macos-system-configuration",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
uuid = { version = "1.17", features = ["v7", "serde"] }

[lints.rust]
unknown_lints = "deny"
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
field_reassign_with_default = "allow"
identity_op = "allow"
manual_range_contains = "allow"
new_without_default = "allow"
