# Copyright 2024 ScopeDB, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "scopeql"
version = "0.2.1"

categories = ["database"]
description = "A command-line interface for ScopeDB"
keywords = ["scopedb"]

edition = "2024"
homepage = "https://www.scopedb.io"
license = "Apache-2.0"
repository = "https://github.com/scopedb/scopedb-sdk"

[dependencies]
anstyle = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
clap-stdin = { version = "0.8.0" }
comfy-table = { version = "7.1.4", default-features = false }
const_format = { version = "0.2.34" }
dirs = { version = "6.0" }
exn = { version = "0.2.0" }
indicatif = { version = "0.18" }
jiff = { version = "0.2", features = ["serde"] }
logos = { version = "0.15.0" }
mea = { version = "0.4.0" }
memchr = { version = "2.7.6" }
nu-ansi-term = { version = "0.50" }
reedline = { version = "0.43.0" }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "charset",
  "http2",
  "macos-system-configuration",
] }
scopedb-client = { path = "../rust", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
shadow-rs = { version = "1.2.1", default-features = false }
thiserror = { version = "2.0" }
tokio = { version = "1.47.1", features = ["full"] }
toml = { version = "0.9.3" }
toml_edit = { version = "0.23.2", features = ["serde"] }
uuid = { version = "1.17", features = ["v7", "serde"] }

[build-dependencies]
build-data = { version = "0.3.0" }
gix-discover = { version = "0.42.0" }
shadow-rs = { version = "1.2.1", default-features = false, features = ["build"] }

[lints.rust]
unknown_lints = "deny"
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
field_reassign_with_default = "allow"
identity_op = "allow"
manual_range_contains = "allow"
new_without_default = "allow"

[profile.release]
debug = true
lto = "thin"

[profile.dist]
codegen-units = 1
debug = true
inherits = "release"
lto = "fat"
