# Copyright 2024 ScopeDB, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "scopedb-client"
version = "0.2.0"

categories = ["database"]
description = "A Rust client for ScopeDB"
keywords = ["scopedb"]

edition.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
exn = { workspace = true }
fastrace = { workspace = true }
fastrace-reqwest = { workspace = true }
jiff = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
