# Copyright 2024 ScopeDB, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "scopeql"
version = "0.1.0"

categories = ["database"]
description = "A command-line interface for ScopeDB"
keywords = ["scopedb"]

edition.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anstyle = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
dirs = { workspace = true }
exn = { workspace = true }
indicatif = { workspace = true }
jiff = { workspace = true }
logos = { workspace = true }
mea = { workspace = true }
nu-ansi-term = { workspace = true }
reedline = { workspace = true }
reqwest = { workspace = true }
scopedb-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "rt",
  "rt-multi-thread",
  "signal",
  "time",
] }
uuid = { workspace = true }

[lints]
workspace = true
